--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.vid</groupId>
     <artifactId>scraper</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>final</version>
     <name>scraper</name>
     <description>Demo project for Spring Boot</description>
     <properties>
